switch to Sanic for async request handling

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-amqp==2.3.2
-billiard==3.5.0.5
-celery==4.2.1
-Click==7.0
-Events==0.3
-Flask==1.0.2
-Flask-JWT-Extended==3.14.0
-itsdangerous==1.1.0
-Jinja2==2.10
-kombu==4.2.2
-MarkupSafe==1.1.0
-PyJWT==1.7.1
-pytz==2018.7
-vine==1.1.4
-Werkzeug==0.14.1
+aiofiles==0.4.0
+attrs==19.1.0
+httptools==0.0.13
+multidict==4.5.2
+sanic==19.3.1
+Sanic-Cors==0.9.8
+Sanic-Plugins-Framework==0.7.0
+sanic-swagger==0.0.2
+ujson==1.35
+uvloop==0.12.2
+websockets==6.0
