--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-amqp==2.3.2
-billiard==3.5.0.5
-celery==4.2.1
+amqp==2.4.2
+billiard==3.6.0.0
+celery==4.3.0
 Click==7.0
-Events==0.3
 Flask==1.0.2
-Flask-JWT-Extended==3.14.0
+Flask-JWT-Extended==3.18.1
 itsdangerous==1.1.0
-Jinja2==2.10
-kombu==4.2.2
-MarkupSafe==1.1.0
+Jinja2==2.10.1
+kombu==4.5.0
+MarkupSafe==1.1.1
 PyJWT==1.7.1
-pytz==2018.7
-vine==1.1.4
-Werkzeug==0.14.1
+pytz==2019.1
+redis==3.2.1
+six==1.12.0
+vine==1.3.0
+Werkzeug==0.15.2
